--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
       <div class="line3"></div>
     </div>
     <ul class="nav-links">
-      <li class="link"><a href="home.php">Home</a></li>
+      <li class="link"><a href="index.html">Home</a></li>
       <span class="dot">
         <p>:)</p>
       </span>
@@ -40,7 +40,7 @@
       <span class="dot">
         <p>:)</p>
       </span>
-      <li class="link"><a href="about.php">About</a></li>
+      <li class="link"><a href="about.html">About</a></li>
       <span class="dot">
         <p>:)</p>
       </span>
